feat: add image to consumable
